feat: Implement multi-tenancy support with EF Core
- Added DbConfigurations for identity models including ApplicationUser, ApplicationRole, and their claims.
- Created ApplicationDbContext and TenantDbContext for managing application and tenant-specific data.
- Introduced ABCSchoolTenantInfo model to represent tenant information.
- Configured multi-tenancy in Startup.cs with Finbuckle.MultiTenant.
- Added initial migrations for both ApplicationDb and TenantDb contexts.
- Established database schemas for identity and multitenancy.
- Enhanced identity models with additional properties for user and role claims.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ABCSchoolSharedDb;User Id=sa;Password=P@ssw0rd#;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
